clusters/apps/env/production/observability/signoz/ingressroute.signoz.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: signoz
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: signoz.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`signoz.${FAMILY_DOMAIN}`)"
      priority: 10
      services:
        - name: vm-single-victoria-metrics-single-server
          port: 8428
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: signoz.${FAMILY_DOMAIN}
